fix emoji wrapping on mobile

--- a/components/ChatSingleMessage/ChatSingleMessage.module.scss
+++ b/components/ChatSingleMessage/ChatSingleMessage.module.scss
@@ -186,7 +186,6 @@
             flex-wrap: wrap;
             margin-left: 0px;
             margin-top: 4px;
-            width: max-content;
             column-gap: 4px;
             row-gap: 4px;
             //background: $black_60;
